--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,11 +2,23 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+
+    .box-wrapper {
+        width: 100%;
+        border: 1px solid #222426;
+        background: linear-gradient(153deg,hsla(0,0%,100%,.12) -65.62%,hsla(0,0%,100%,.04) 83.28%);
+        backdrop-filter: blur(25px);
+        padding: 16px 24px;
+        border-radius: 8px;
+    }
+
     .home-container {
         display: flex;
+        justify-content: space-evenly;
         gap:1rem;
         .portfolio-wrapper {
-            width: 400px;
+            height: 100%;
+            width: 380px;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -58,20 +70,150 @@
     }
         .social-media-wrapper {
             display: flex;
-            gap:8px;
+            gap:12px;
             align-items: center;
             justify-content: center;
             .icon {
                 cursor: pointer;
             }
         }
+
     }
-    .box-wrapper {
-        width: 100%;
-        border: 1px solid #222426;
-        background: linear-gradient(153deg,hsla(0,0%,100%,.12) -65.62%,hsla(0,0%,100%,.04) 83.28%);
-        backdrop-filter: blur(25px);
-        padding: 16px 24px;
-        border-radius: 8px;
+    
+    .job-title-main-wrapper {
+        width: fit-content;
+        .text-1 {
+            text-align: left;
+            font-size: 30px;
+            font-weight: 600;
+        }
+        .text-2 {
+            margin-left: 60px;
+            text-align: right;
+            color: #b3b6b9;
+            font-size: 30px;
+            font-weight: 600;
+        }
+    }
+
+    .certification-main-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap:1rem;
+    }
+    .job-box {
+        display: flex;
+        // flex-direction: column;
+        gap: 1rem;
+    }
+    .resume-box {
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .resume-poster-main-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .mui-button-wrapper {
+            border: 1px solid #9747ff;
+        }
+        .resume-button-wrapper {
+            display: flex;
+            align-items: center;
+            gap:8px;
+            .text-1 {
+                text-transform: capitalize;
+                color: #9747ff;
+            }
+        }
+    }
+
+    .skills-main-wrapper {
+        height: 100%;
+        padding: 42px 6px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap:1rem 4rem;
+        .dev-wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            .icon-wrapper {
+                border: 1px solid #414141;
+                border-radius: 6px;
+                padding: 3px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                margin-left: 52px;
+            }
+        }
+
+    }
+
+    .experience-main-container {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        gap:1.5rem;
+        text-align: center;
+        padding: 24px 32px;
+        .text-1 {
+            font-size: 50px;
+            font-weight: 600;
+            text-align: center;
+        }
+        .text-2 {
+            color: #FFF;
+            opacity: .7;
+            font-size: 16px;
+            text-align: center;
+        }
+    }
+    .cursor {
+        cursor: pointer;
+    }
+
+    @media only screen and (max-width: 1200px) {
+        .home-container {
+            flex-wrap: wrap;
+            .portfolio-wrapper {
+                width: 100%;
+            }
+            .resume-box {
+                width: 100%;
+            }
+            .experience-main-container {
+                flex-direction: row;
+                justify-content: space-evenly;
+            }
+            .job-title-main-wrapper{
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                .text-1 {
+                    text-align: center;
+                }
+                .text-2 {
+                    text-align: center;
+                }
+            }
+        }
+    }
+    @media only screen and (max-width: 650px) {
+        .home-container { 
+            .job-box {
+                flex-direction: column;
+            }
+           
+        }
     }
 }
