--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
     font-family: 'Poppins';
 }
 .app-main-container {
-    height: 200vh;
+    min-height: 200vh;
+    max-height: 100%;
     width: 100%;
     padding: 4% 8%;
     background: #131313;
