--- a/src/atoms/Navbar/Navbar.scss
+++ b/src/atoms/Navbar/Navbar.scss
@@ -93,5 +93,17 @@
         
     }
     
-    
+    @media only screen and (max-width: 700px) {
+        .navbar-content-main-wrapper {
+            flex-wrap: wrap;
+            justify-content: flex-start;
+        }
+    }
 }
+
+    @media only screen and (max-width: 700px) {
+        .navbar-main-container {
+            display: flex;
+            flex-direction: column;
+        }
+    }
