--- a/src/pages/Skills/Skills.scss
+++ b/src/pages/Skills/Skills.scss
@@ -25,4 +25,34 @@
         font-weight: 600;
         color: white;
     }
+
+    .header-description {
+        display: 'Poppins';
+        font-size: 14px;
+        font-weight: 300;
+        opacity: 0.7;
+        color: #ffffff;
+    }
+
+     .dev-wrapper {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            // justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 2rem;
+            .icon-wrapper {
+                border: 1px solid #3e3e3e;
+                border-radius: 6px;
+                padding: 8px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap:6px;
+            }
+            .icon-wrapper:hover {
+                transform: scale(1.1);
+                transition: all .2s ease-in-out;
+            }
+        }
 }
