--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
     max-height: 100%;
     width: 100%;
     padding: 4% 8%;
-    background: #131313;
+    /* background: #131313; */
+    background: linear-gradient(122deg, #000000, #6532fff2);
     color: #FFF;
 }
