--- a/src/pages/Projects/Projects.scss
+++ b/src/pages/Projects/Projects.scss
@@ -74,7 +74,7 @@
                     text-decoration: none;
                     padding: 8px 16px;
                     border-radius: 4px;
-                    background-color: #3e3e3e;
+                    background-color: #1d1d1d;
                     transition: background-color .2s ease-in-out;
                     text-transform: capitalize;
                 }
