contact us page

--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,5 @@
     /* background: #131313; */
     background: linear-gradient(122deg, #000000, #6532fff2);
     color: #FFF;
+    padding-bottom: 10vh;
 }
